compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__bit_array_segment_conflicting_options_int.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 65
expression: "let x = <<1:int-bytes>> x"
snapshot_kind: text
---
----- SOURCE CODE
let x = <<1:int-bytes>> x

----- ERROR
error: Invalid bit array segment
  ┌─ /src/one/two.gleam:1:17
  │
1 │ let x = <<1:int-bytes>> x
  │                 ^^^^^ This is an extra type specifier

Hint: This segment already has the type int.
See: https://tour.gleam.run/data-types/bit-arrays/
